@@ -1,5 +1,3 @@
-DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
-EBUILD kadu-alsa_sound-0.6.0.1.ebuild 269 RMD160 755dda4b7a757a5d08293cd97d2eea6612d626c3 SHA1 bdda1134d72271c381afbe29157f277ef386e92e SHA256 1db31fb298276cbd5b2b2b4f8e9fbff9258eaf5819dc752b1a32c9e14a3d1c10
 EBUILD kadu-alsa_sound-0.6.0.2.ebuild 269 RMD160 755dda4b7a757a5d08293cd97d2eea6612d626c3 SHA1 bdda1134d72271c381afbe29157f277ef386e92e SHA256 1db31fb298276cbd5b2b2b4f8e9fbff9258eaf5819dc752b1a32c9e14a3d1c10
-MISC ChangeLog 413 RMD160 60f580cabf271e719e67b6acc687ba8f644109a5 SHA1 2003f9226a0ea6a0819d3bc7ecaa8c6a5a169e1a SHA256 248fff53fe1988e1fc8016a6252f3d761bf4b94c3ef89b1e2adada0854156745
+MISC ChangeLog 515 RMD160 1fb9d712cc9605790ddefc8503966c27a39d244c SHA1 d3effd7a74a3409e7ab89374b105a83fc9748411 SHA256 5789c5445a989acaec68ee4dbab2bb63c0b32030f1ef15fc9adc35a94ac771e1
